# lcp

./: .env  .env.dev  .env.docker  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile.web  Dockerfile.worker  LICENSE  MANIFEST.in  README.md  api_example.py  config.json  crowdin.yml  deploy.test.sh  docker-compose.dev.yml  docker-compose.yml  dqd_parser.py  favicon.psd  mypy.ini  package.json  pyproject.toml  requirements.txt  run.py  setup.py  test_all.py  worker.py
abstract-query/: .gitignore  README.md  mypy.ini  post-commit  requirements.txt  setup.py
abstract-query/abstract_query/: __init__.py  __main__.py  constraint.py  typed.py
backend/: callbacks.py  check_file_permissions.py  configure.py  corpora.py  ddl_gen.py  document.py  dqd_parser.py  impo.py  import.py  jobfuncs.py  lama_user_data.py  log.py  pg_upload.py  project.py  query.py  query_service.py  sock.py  store.py  test_parser.py  upload.py  utils.py  validate.py  video.py
backend/importer/: config.py  corpus_data.py  corpus_template.py  importer.py  readme.md  setup.py
backend/importer/data/bnc/: vert_documents.csv  vert_segments.csv
backend/importer/scripts/: bnc.sql
database/: Dockerfile  db_readme.md  init.sql
database/init-db/: functions_importer.sql  init.sh  roles.sql
database/init-db/scripts/: functions_exporter.sql  functions_importer.sql  functions_meta.sql  init_lcp.sql  roles.sql
database/scripts/: functions_importer.sql  init_lcp.sql  roles.sql
database/wip/: init_lcp.sql
frontend/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  config.js  dqd_monaco.js  dqd_parser.js  fluent.js  fontawesome.js  httpApi.js  i18n.js  main.catchphrase.js  main.js  main.lcp.js  main.lcphome.js  main.ofrom.js  main.soundscript.js  main.vian.js  main.videoscope.js  tooltips.js  utils.js
frontend/src/assets/: datepicker.css  multiselect.css  style.css
frontend/src/components/: CorpusGraphView.vue  CorpusGraphViewNew.vue  DepRelView.vue  DetailsTableView.vue  EditorView.vue  ExportView.vue  FooterView.vue  ImageViewer.vue  KWICTableView.vue  LoadingView.vue  NotificationView.vue  PaginationComponent.vue  PlayerComponent.vue  QueryEditView.vue  ReadonlyEditorView.vue  ResultDetailsModalView.vue  ResultsTableView.vue  TitleComponent.vue  VideoPlayer.vue
frontend/src/components/corpus/: DetailsModal.vue  MetadataEdit.vue
frontend/src/components/project/: EditView.vue  NewView.vue
frontend/src/components/results/: AnalysisView.vue  DetailsModalView.vue  DetailsTableView.vue  KWICView.vue  PlainTableView.vue  TableView.vue
frontend/src/components/videoscope/: TimelineView.vue
frontend/src/locales/: en.ftl  it.ftl
frontend/src/router/: index.js
frontend/src/stores/: corpusStore.js  loadingStore.js  notificationStore.js  projectStore.js  userStore.js  wsStore.js
frontend/src/views/: HomeView.vue  PlayerView.vue  QueryTestView.vue  QueryView.vue  QueryViewV2.vue  UserView.vue
frontend/src/views/CATCHPHRASE/: App.vue
frontend/src/views/LCP/: App.vue
frontend/src/views/OFROM/: App.vue
frontend/src/views/VIAN/: App.vue
frontend/src/views/catchphrase/: App.vue
frontend/src/views/lcp/: App.vue  HomeView.vue
frontend/src/views/lcphome/: App.vue  HomeView.vue
frontend/src/views/soundscript/: App.vue
frontend/src/views/videoscope/: App.vue
importer/: CorpusData.py  CorpusTemplate.py  Importer.py  config.py  readme.md  setup.py
importer/data/bnc/: vert_tokens.csv
lcpvian/: __init__.py  __main__.py  action.py  api.py  app.py  authenticate.py  authenticate_lama.py  callbacks.py  check_file_permissions.py  configure.py  convert.py  corpora.py  cql_to_json.py  cqp_to_json.py  ddl_gen.py  document.py  dqd_parser.py  export.py  export_xml.py  exporter.py  exporter_future.py  exporter_future_swissdox.py  exporter_swissdox.py  exporter_xml.py  fcs.py  impo.py  jobfuncs.py  lama.py  lama_user_data.py  log.py  message.py  project.py  qi.py  query.py  query_classes.py  query_future.py  query_service.py  sock.py  store.py  swissdox.py  (+9 more)
lcpvian/abstract_query/: README.md  constraint.py  create.py  disjunctions.notes  prefilter.py  query.py  results.py  sequence.py  sequence_members.py  sql_examples.md  typed.py  utils.py
manual/: .gitignore  README.md  SUMMARY.md  at.md  builder.md  catchphrase.md  corpora_in_lcp.md  corpus_managament.md  corpus_management.md  dqd.md  exporting.md  first_steps.md  glossary.md  import_conllu.md  import_tutorial.md  import_tutorial_part1.md  import_tutorial_part2.md  importing.md  keywords.md  lcp_cli.md  lcp_landing.md  model.md  package-lock.json  percent.md  prepared_files.md  query_workflow.md  querying.md  results.md  sequence.md  set.md  soundscript.md  videoscope.md
manual/dqd/: results.md  sequence.md  set.md
manual/import_swissdox/: Swissdox2LCP_conll.py  Swissdox2LCP_langident.py  Swissdox2LCP_ner.py  Swissdox2LCP_vectors.py  adjust_ranges_idxs.py  export_content.sql  get_metadata.sql  import_data.py  import_swissdox.md  process_swissdox_new.py
parser/: README.md  cobquec.auto.json  cobquec.auto.json.bak  cobquec3.b.json  cobquec3.json  cobquec_to_lark.py  cql.lark  cqp.lark  dqd_grammar.lark  dqd_grammar.lark.bak  dqd_parser.js  dqd_parser.py  lark_to_cobquec.py  newgrammar.lark  test.dqd  test.lark  test2.dqd  test_cql.py  test_grammar.lark  test_grammar.lark.bak  test_grammar.lark.bak2  testgrammar.py  update.sh
tests/: test_all.py  test_parser.py
tests/test_data/: 01.dqd  01.json  01.msql  01.sql  02.dqd  02.json  02.msql  02.sql  03.dqd  03.json  03.sql  04.dqd  04.json  04.sql
uploads/: ddl_gen.py
uplord/: __init__.py  __main__.py  app.py  callbacks.py  check_file_permissions.py  configure.py  corpora.py  ddl_gen.py  deploy.py  document.py  dqd_parser.py  impo.py  jobfuncs.py  log.py  nomypy.py  project.py  qi.py  query.py  query_service.py  sock.py  store.py  typed.py  upload.py  utils.py  validate.py  worker.py
