
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcpvian"
dynamic = ["version"]
description = "linguistics web app"
readme = "README.md"
authors = [
    { name = "Danny McDonald", email = "mcddjx@gmail.com" },
    { name = "Jeremy Zehr", email = "jeremy.zehr@uzh.ch" },
    { name = "Jonathan Schaber", email = "jeremy.schaber@uzh.ch" },
    { name = "Igor MustaÄ", email = "igor.mustac@uzh.ch" },
]
keywords = [
    "corpus",
    "linguistics",
    "nlp",
]
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Environment :: Web Environment",
]
dependencies = [
  "aiocontextvars~=0.2.2",
  "aiodns~=3.2.0",
  "aiofiles~=23.2.1",
  "aiohttp-catcher~=0.3.2",
  "aiohttp-cors~=0.7.0",
  "aiohttp~=3.9.3",
  "asyncpg~=0.29.0",
  "automathon~=0.0.15",
  "bcrypt~=4.1.2",
  "Brotli~=1.1.0",
  "certifi~=2024.2.2",
  "cffi~=1.16.0",
  "click~=8.1.7",
  "cryptography~=42.0.5",
  "devtools~=0.12.2",
  "duckdb~=0.10.1",
  "executing~=2.0.1",
  "greenlet~=3.0.3",
  "gunicorn~=21.2.0",
  "hatch~=1.9.4",
  "hatch-mypyc~=0.16.0",
  "hatchling<1.22",  # newer version exists but does not work with hatch
  "lark~=1.1.9",
  "keyring<25.0.0,>=24.0.0",  # poetry issue
  "mypy~=1.9.0",
  "numpy~=1.26.4",
  "packaging~=24.0",
  "pandas-stubs~=2.2.1.240316",
  "pandas~=2.2.1",
  "paramiko~=3.4.0",
  "psutil~=5.9.8",
  "py7zr~=0.21.0",
  "pyarrow~=15.0.2",
  "pycares~=4.4.0",
  "pydantic~=2.6.4",
  "pyjwt~=2.8.0",
  "python-dotenv~=1.0.1",
  "pytz~=2024.1",
  "redis~=5.0.3",
  "requests~=2.31.0",
  "rq~=1.16.1",
  "sentry-sdk~=1.44.0",
  "SQLAlchemy~=2.0.29",
  "sqlparse~=0.4.4",
  "sshtunnel~=0.4.0",
  "tqdm~=4.66.2",
  "types-aiofiles~=23.2.0.20240331",
  "types-decorator~=5.1.8.20240310",
  "types-psutil~=5.9.5.20240316",
  "types-pyOpenSSL~=24.0.0.20240311",
  "types-pytz~=2024.1.0.20240203",
  "types-redis~=4.6.0.20240409",
  "types-requests~=2.31.0.20240406",
  "types-tqdm~=4.66.0.20240106",
  "urllib3~=2.2.1",
  "uvloop~=0.19.0",
]

[tool.hatch.version]
path = "lcpvian/__init__.py"

[tool.hatch.build]
packages = ["lcpvian", "abstract-query/abstract_query", "lcp-upload/lcp_upload"]
skip-excluded-dirs = true
# ?:
reproducible = false

[project.urls]
Repository = "https://github.com/liri-uzh/lcp.git"

[project.scripts]
lcp = "lcpvian.app:start"
lcp-setup = "lcpvian.utils:setup"
lcp-worker = "lcpvian.worker:start_worker"
lcp-frontend-setup = "lcpvian.action:setup"
lcp-frontend-build = "lcpvian.action:build"
lcp-frontend-edrop = "lcpvian.action:edrop"
lcp-frontend-npm-install = "lcpvian.action:npm_install"
lcp-frontend-yarn = "lcpvian.action:yarn"
lcp-frontend-install = "lcpvian.action:install"
lcp-frontend-serve = "lcpvian.action:serve"
lcp-run = "lcpvian.action:start_all"

#[tool.hatch.metadata]
#allow-direct-references = true

[tool.hatch.envs.default]
dependencies = ["black", "mypy"]

[tool.hatch.envs.default.scripts]
format-check = [
  "black --version",
  "black --check --diff .",
]
format = [
  "black .",
  "format-check",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel.force-include]
"abstract-query/abstract_query" = "lcpvian/abstract_query"
"lcp-upload/lcp_upload" = "lcpvian/lcp_upload"
"frontend" = "frontend"
"vian-eventdrops" = "vian-eventdrops"
# "frontend/babel.config.js" = "frontend/babel.config.js"
#"frontend/jsconfig.json" = "frontend/jsconfig.json"
# "frontend/package.json" = "frontend/package.json"
# "frontend/README.md" = "frontend/README.md"
# "frontend/vue.config.js" = "frontend/vue.config.js"
# "frontend/yarn.lock" = "frontend/yarn.lock"
"parser" = "parser"

[tool.hatch.build.targets.sdist.force-include]
"abstract-query/abstract_query" = "lcpvian/abstract_query"
"lcp-upload/lcp_upload" = "lcpvian/lcp_upload"
"frontend/src" = "frontend/src"
"frontend/babel.config.js" = "frontend/babel.config.js"
"frontend/jsconfig.json" = "frontend/jsconfig.json"
"frontend/package.json" = "frontend/package.json"
"frontend/README.md" = "frontend/README.md"
"frontend/vue.config.js" = "frontend/vue.config.js"
"frontend/yarn.lock" = "frontend/yarn.lock"
"parser" = "parser"

[tool.hatch.build.targets.sdist]
include-only = [
  "lcpvian",
  "parser",
  # "vian-eventdrops",
  ".env.example",
  "README.md",
  "pyproject.toml",
  "py.typed",
  "MANIFEST.in",
  "mypy.ini",
]
exclude = [
  "abstract-query",
  "lcp-upload",
  "frontend/dist",
  "frontend/node_modules",
  "frontend/public",
  "frontend/.gitignore",
  "frontend/src",
  "frontend/package.json",
  "frontend/vue.config.js",
]
#[tool.hatch.build.targets.sdist.sources]
#".env.example" = "~/LCP.env"

[tool.hatch.build.targets.wheel]
include-only = [
  "lcpvian",
  "parser",
  ".env.example",
  "README.md",
  "pyproject.toml",
  "py.typed",
  "MANIFEST.in",
  "mypy.ini",
]
exclude = [
  "abstract-query",
  "lcp-upload",
  "frontend/dist",
  "frontend/node_modules",
  "frontend/public",
  "frontend/.gitignore",
  #"frontend/src",
  #"frontend/package.json",
  "frontend/vue.config.js",
  #"frontend/yarn.lock",
  #"frontend/jsconfig.json",
  "frontend/babel.config.js",
  "frontend/.browserslistrc",
  "frontend/.eslintrc.js",
]
[tool.hatch.build.targets.wheel.sources]
".env.example" = ".env"


# todo: add if/when typing all fixed
#[tool.hatch.build.hooks.mypyc]
#dependencies = [
#  "hatch-mypyc"
#]
#[tool.hatch.build.targets.wheel.hooks.mypyc]
#dependencies = ["hatch-mypyc"]
#include = ["lcpvian"]
#exclude = [
#  "lcpvian/__main__.py",
#  "lcpvian/nomypypy",
#]

#[build.targets.wheel.hooks.mypyc.options]
#opt_level = "3"

[tool.poetry.dependencies]
abstract-query = { path = "./abstract-query", develop = true }
lcp-upload = { path = "./lcp-upload", develop = true }

